--- a/streaming.html
+++ b/streaming.html
@@ -30,47 +30,56 @@
             </ul>
         </nav>
     </header>
-    <!--Fim Menu Responsivo-->
+    <!--Fim Menu Responsivo--> 
+    <!-- Início Texto Vídeos em Destaque -->
+    <div class="embed-container">
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <section class="col-12">
+                    <h2>#Vídeos de Saturno e projetos</h2>
+                    <p>Venha conhecer mais detalhes sobre Saturno, o porque ele é tão famoso e suas Curiosidades!</p>
+                </section>
+            </div>
+            <!-- Fim Texto Vídeos em Destaque -->
+            <div class="row">
+                <!-- Início Vídeo 1 -->
+                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                    <iframe width="1237" height="696" src="https://www.youtube.com/embed/_7tU8-LHPDI" title="VIAJANDO PARA SATURNO E CONHECENDO SEUS MISTÉRIOS!!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <!-- Fim Vídeo 1 -->
+                <!-- Alt + z >> Ativa as linhas abaixo [ Quebra Linha ]-->
+                <!-- Início Vídeo 2 -->
+                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                    <iframe width="1237" height="696" src="https://www.youtube.com/embed/G11OLF9OxC8" title="A origem dos anéis de Saturno" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>            
+                <!-- Fim Vídeo 2 -->
+                <!-- Início Vídeo 3 -->
+                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                    <iframe width="1237" height="696" src="https://www.youtube.com/embed/WAzlczWpFuM" title="O Que a NASA Descobriu Sobre Saturno Até Agora!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>            
+                <!-- Fim Vídeo 3 -->
+                <!-- Início Vídeo 4 -->
+                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                    <iframe width="1237" height="696" src="https://www.youtube.com/embed/0u8Lj8rmQ-E" title="10 CURIOSIDADES SOBRE SATURNO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div> 
+                <!-- Fim Vídeo 4 -->
+                <!-- Início Vídeo 5 -->
+                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                    <iframe width="1237" height="696" src="https://www.youtube.com/embed/lqgClAxvOzw" title="Planeta Saturno: tudo sobre o SENHOR DOS ANÉIS do nosso Sistema Solar" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <!-- Fim Vídeo 5 -->
+                <!-- Início Vídeo 6 -->
+                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                    <iframe width="1237" height="696" src="https://www.youtube.com/embed/-KAVhVbdkB0" title="Se a Terra e Saturno Se Cruzassem, Qual Planeta Ganharia?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <!-- Fim Vídeo 6 -->
+            </div>
 
-    <!--inicio corrousel pagina principal-->
-    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
-        <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="2000">
-                <img src="./img/carousel 1.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-                <img src="./img/carousel 2.webp" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-                <img src="./img/carousel 3.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-                <img src="./img/carousel 4-.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-                <img src="./img/carousel 5.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-                <img src="./img/carousel 6.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-                <img src="./img/carousel 7.jpg" class="d-block w-100" alt="..." />
-            </div>
         </div>
-    </div>
-    <!--INICIO CONTROLE CAROUSEL-->
-    <button class="carousel-control-prev" data-bs-target="#carouselExampleInterval" type="button" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" data-bs-target="#carouselExampleInterval" type="button" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
+
     </div>
 
-    <!--Fim Controle carousel -->
-    <!--Fim carousel página principal-->
+
     <!--Inicio Banner -->
     <div class="section-banner-home">
         <div class="container-fluid">
