--- a/index copy 3.html
+++ b/index copy 3.html
@@ -24,8 +24,9 @@
             <ul id="menu" role="menu">
                 <li><a class="linkMenu" href="index.html">Home</a></li>
                 <li><a class="linkMenu" href="produtos.html">Produtos</a></li>
+                <li><a class="linkMenu" href="resenha.html">Resenha</a></li>
                 <li><a class="linkMenu" href="curiosidades.html">Curiosidades</a></li>
-                <li><a class="linkMenu" href="streaming.html">#Streaming</a></li>
+                <li><a class="linkMenu" href="generos.html">Gêneros</a></li>
                 <li><a class="linkMenu" href="contato.html">Contato</a></li>
             </ul>
         </nav>
