update prj discovery space rev.13 > 03/06/2023

--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
 
             </button>
             <ul id="menu" role="menu">
-                <li><a class="linkMenu" href="index.html">Home</a></li>
-                <li><a class="linkMenu" href="produtos.html">Produtos</a></li>
-                <li><a class="linkMenu" href="curiosidades.html">Curiosidades</a></li>
-                <li><a class="linkMenu" href="streaming.html">#Streaming</a></li>
-                <li><a class="linkMenu" href="contato.html">Contato</a></li>
+                <li><a class="linkMenu" href="./index.html">Home</a></li>
+                <li><a class="linkMenu" href="./produtos.html">Produtos</a></li>
+                <li><a class="linkMenu" href="./streaming.html">#Streaming</a></li>
+                <li><a class="linkMenu" href="./contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -268,6 +267,15 @@
                 </div>
             </div>
     <!--Fim da Galeria -->
+    
+       <!-- Início Whatsapp -->
+       <div class="whatsapp">
+        <div class="container-grid logo-whats">
+            <a target="_blank" href="https://api.whatsapp.com/send?phone=5515996724028&text=Ol%C3%A1,%20estou%20navegando%20no%20site%20Saturn%20Planet%20e%20gostaria%20de%20mais%20informa%C3%A7ooes!"><img src="./img/whats.png" class="quica" alt="Contato Whatsapp"></a>
+        </div>
+    </div>
+    <!-- Fim Whatsapp -->
+    
     <!-- Início footer -->
     <footer class="rodape">
         <div class="container">
@@ -297,10 +305,10 @@
                 <!-- Ctrl + Space > Mostra o caminho do objeto dentro de SRC -->
                 <div class="col-md-4">
                     <figure class="redes-sociais">
-                        <a href="#"><img src="img/face.png" alt="Facebook"></a>
-                        <a href="#"><img src="img/insta.png" alt="Instagram"></a>
-                        <a href="#"><img src="img/youtube.png" alt="YouTube"></a>
-                        <a href="#"><img src="img/linkedin.png" alt="Linkedin"></a>
+                        <a href="#"><img src="./img/face.png" alt="Facebook"></a>
+                        <a href="#"><img src="./img/insta.png" alt="Instagram"></a>
+                        <a href="#"><img src="./img/youtube.png" alt="YouTube"></a>
+                        <a href="#"><img src="./img/linkedin.png" alt="Linkedin"></a>
                     </figure>
                     <br>
                     <a href="index.html">Home</a>
